支持自定义 Live2d 模型，以及模型宽高

--- a/assets/css/setting.miracles.css
+++ b/assets/css/setting.miracles.css
@@ -1,193 +1,1 @@
-@charset 'utf-8';
-
-/*
- * Setting style for Miracles
- * Author:  Eltrac
- * Lisence: MIT
- */
- 
-/* 全局样式 */
-:root {
-	--theme-color: #4D90FE;
-}
-body {
-	width: 100%;
-	background: rgb(252,252,252);
-	font-family: 'Noto Sans SC',sans-serif
-}
-hr {
-	border: none;
-	border-bottom: 1px solid rgb(220,220,220);
-	margin: 30px 0;
-}
-
-/* 面板 */
-.miracles-pannel {
-	background: rgba(90,90,90,0.8);
-	border-radius: 5px;
-	padding: 28px 30px;
-	margin: 40px 0;
-	margin-top: 10px;
-	color: #fff;
-	box-shadow: 0 2px 8px #ddd;
-	-moz-box-shadow: 0 2px 8px #ddd;
-    -webkit-box-shadow: 0 2px 8px #ddd;
-}
-.miracles-pannel a {
-	color: rgb(250,250,250);
-	position: relative;
-}
-.miracles-pannel a:hover {
-	text-decoration: none;
-}
-.miracles-pannel a::before {
-	content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 2px;
-    background-color: rgb(250,250,250);
-    transform-origin: bottom right;
-    transform: scaleX(0);
-    transition: transform 0.5s ease;
-}
-.miracles-pannel a:hover::before {
-	transform-origin: bottom left;
-    transform: scaleX(1);
-}
-
-/* Backup */
-.miracles-backup-alert {
-	transition: all .2s;
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-	padding: 15px 0;
-	background: #4D90FE;
-	text-align: center;
-}
-.miracles-backup-alert,
-.miracles-backup-alert a {
-	color: #fff;
-}
-.miracles-backup-button {
-	margin: 15px 0;
-	margin-bottom: 0;
-	padding: 6px 10px;
-	border-radius: 2px;
-	color: #fff;
-	background: rgb(100,100,100);
-	box-shadow: 0 1px 1px #000;
-	-moz-box-shadow: 0 1px 1px #000;
-    -webkit-box-shadow: 0 1px 1px #000;
-	border: none;
-}
-[action="?MiraclesBackup"] {
-	margin-top: -10px;
-}
-
-/* Para */
-.miracles-para-attention {
-	padding: 10px 12px;
-	background: red;
-	color: #fff;
-	border-radius: 3px;
-}
-
-/* News */
-iframe.miracles-news {
-	width: 100%;
-	border: none;
-	height: 60px;
-	margin: 0 -8px;
-	margin-top: -5px;
-}
-
-/* 滚动条 */
-::-webkit-scrollbar {
-	width: 6px;
-	height: 5px
-}
-::-webkit-scrollbar-button {
-	display: none
-}
-::-webkit-scrollbar-thumb {
-	background: gray;
-}
-
-/* 覆盖原有样式 */
-.typecho-head-nav {
-	box-shadow: 0 0 30px #ddd;
-	-moz-box-shadow: 0 0 30px #ddd;
-	-webkit-box-shadow: 0 0 30px #ddd;
-	padding: 15px 0;
-	font-size: 15px;
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-}
-
-.typecho-page-title {
-	visibility: hidden;
-	margin-top: 90px;
-}
-
-.typecho-option li input,
-.typecho-option li textarea,
-.typecho-option li select,
-.typecho-option .btn {
-	border-radius: 4px;
-	background: #fff;
-	padding: 10px 12px;
-	box-shadow: 0 1px 5px #ddd;
-	-moz-box-shadow: 0 1px 5px #ddd;
-    -webkit-box-shadow: 0 1px 5px #ddd;
-	border-color: #ddd;
-}
-
-.typecho-option li select {
-	padding: 0 4px;
-	min-width: 100px;
-}
-
-.typecho-option li textarea {
-	resize: none;
-	height: 160px!important;
-}
-
-.typecho-option li .typecho-label {
-	font-size: 15px;
-	letter-spacing: 1px;
-	margin: 15px 0;
-	margin-top: 20px;
-}
-
-.typecho-option .btn {
-	display: block;
-	width: 100%;
-	margin: 25px 0;
-	height: 50px;
-	text-align: center;
-	background: var(--theme-color);;
-	font-size: 18px;
-}	
-
-/* Media */
-@media (min-width:768px) {
-    .typecho-option-tabs {
-		margin-left: 122px;
-	}
-}
-@media (min-width:992px) {
-	.typecho-option-tabs {
-		margin-left: 160px;
-	}
-}
-@media (min-width:1200px) {
-	.typecho-option-tabs {
-		margin-left: 194px;
-	}
-}
+@charset 'utf-8';:root{--theme-color:#4D90FE}body{width:100%;background:#fcfcfc;font-family:'Noto Sans SC',sans-serif}hr{border:none;border-bottom:1px solid #dcdcdc;margin:30px 0}.miracles-pannel{background:rgba(90,90,90,.8);border-radius:5px;padding:28px 30px;margin:40px 0;margin-top:10px;color:#fff;box-shadow:0 2px 8px #ddd;-moz-box-shadow:0 2px 8px #ddd;-webkit-box-shadow:0 2px 8px #ddd}.miracles-pannel a{color:#fafafa;position:relative}.miracles-pannel a:hover{text-decoration:none}.miracles-pannel a::before{content:'';position:absolute;bottom:0;left:0;right:0;height:2px;background-color:#fafafa;transform-origin:bottom right;transform:scaleX(0);transition:transform .5s ease}.miracles-pannel a:hover::before{transform-origin:bottom left;transform:scaleX(1)}.miracles-backup-alert{transition:all .2s;position:fixed;top:0;left:0;right:0;padding:15px 0;background:#4d90fe;text-align:center}.miracles-backup-alert,.miracles-backup-alert a{color:#fff}.miracles-backup-button{margin:15px 0;margin-bottom:0;padding:6px 10px;border-radius:2px;color:#fff;background:#646464;box-shadow:0 1px 1px #000;-moz-box-shadow:0 1px 1px #000;-webkit-box-shadow:0 1px 1px #000;border:none}[action="?MiraclesBackup"]{margin-top:-10px}.miracles-para-attention{padding:10px 12px;background:red;color:#fff;border-radius:3px}iframe.miracles-news{width:100%;border:none;height:60px;margin:0 -8px;margin-top:-5px}::-webkit-scrollbar{width:6px;height:5px}::-webkit-scrollbar-button{display:none}::-webkit-scrollbar-thumb{background:gray}.typecho-head-nav{box-shadow:0 0 30px #ddd;-moz-box-shadow:0 0 30px #ddd;-webkit-box-shadow:0 0 30px #ddd;padding:15px 0;font-size:15px;position:fixed;top:0;left:0;right:0}.typecho-page-title{visibility:hidden;margin-top:90px}.typecho-option .btn,.typecho-option li input,.typecho-option li select,.typecho-option li textarea{border-radius:4px;background:#fff;padding:10px 12px;box-shadow:0 1px 5px #ddd;-moz-box-shadow:0 1px 5px #ddd;-webkit-box-shadow:0 1px 5px #ddd;border-color:#ddd}.typecho-option li select{padding:0 4px;min-width:100px}.typecho-option li textarea{resize:none;height:160px!important}.typecho-option li .typecho-label{font-size:15px;letter-spacing:1px;margin:15px 0;margin-top:20px}.typecho-option .btn{display:block;width:100%;margin:25px 0;height:50px;text-align:center;background:var(--theme-color);font-size:18px}@media (min-width:768px){.typecho-option-tabs{margin-left:122px}}@media (min-width:992px){.typecho-option-tabs{margin-left:160px}}@media (min-width:1200px){.typecho-option-tabs{margin-left:194px}}
