--- a/assets/css/dark.miracles.css
+++ b/assets/css/dark.miracles.css
@@ -1,276 +1,1 @@
-@charset 'utf-8';
-
-/*
- * DarkTheme for Miracles
- * Author:  Eltrac
- * Lisence: MIT
- */
- 
-/* Body */
-.body-dark {
-	background: #4b4b4b;
-	color: rgb(250,250,250);
-}
-/* Post */
-/* > PostContent */
-.body-dark .post-content code {
-	background: #505050;
-}
-.body-dark .post-content img:not(.OwO-img) {
-	box-shadow: 0 2px 10px #323232;
-	-moz-box-shadow: 0 2px 10px #323232;
-	-webkit-box-shadow: 0 2px 10px #323232
-}
-.body-dark .post-content tr:nth-child(odd) {
-	background: #6e6e6e
-}
-.body-dark .post-content hr {
-	background: rgb(120,120,120)
-}
-/* > PostOthers */
-.body-dark .post-meta a {
-	color: gray!important
-}
-/* No Background */
-.body-dark .comment-reply a {
-	background: transparent
-}
-/* No Shadow */
-.body-dark .options {
-	box-shadow: 0 0 0 #fff;
-	-moz-box-shadow: 0 0 0 #fff;
-	-webkit-box-shadow: 0 0 0 #fff;
-}
-/* Need Shadow */
-.body-dark .dark-button,
-.body-dark .post-body,
-.body-dark .post-item,
-.body-dark .post-pagenav a,
-.body-dark .bubble.saying-body:hover,
-.body-dark .OwO-body,
-.body-dark .OwO-open .OwO-logo,
-.body-dark .OwO .OwO-body .OwO-items .OwO-item:hover,
-.body-dark .options,
-.body-dark .comment-pagenav a {
-	box-shadow: 0 0 36px #323232!important;
-	-moz-box-shadow: 0 0 36px #323232!important;
-	-webkit-box-shadow: 0 0 36px #323232!important
-}
-.body-dark .links-item,
-.body-dark .gotop-button {
-	box-shadow: 0 1px 3px #323232!important
-}
-.body-dark .links-item:hover,
-.body-dark .gotop-button:hover {
-	box-shadow: 0 4px 22px #323232!important
-}
-/* Need #646464 bg */
-.body-dark .archives-list a:hover,
-.body-dark .comment-submit button,
-.body-dark .comment-by-author .bubble.comment-content,
-.body-dark .bubble.comment-content,
-.body-dark .comment-author,
-.body-dark .bubble.saying-body,
-.body-dark .tags-item a,
-.body-dark .options-button-active,
-.body-dark .drawer-footer,
-.body-dark .drawer-search,
-.body-dark .drawer-content a:hover,
-.body-dark .comment-pagenav a {
-	background: #646464!important;
-}
-/* Need #5a5a5a bg */
-.body-dark .search-form input,
-.body-dark .comment-form input,
-.body-dark .OwO-logo,
-.body-dark .comment-form textarea,
-.body-dark .comment-reply a:hover,
-.body-dark .dark-button,
-.body-dark .gotop-button,
-.body-dark .links-item,
-.body-dark .post-body,
-.body-dark .post-content th,
-.body-dark .post-item,
-.body-dark .post-pagenav a,
-.body-dark .OwO-body,
-.body-dark .OwO-package-active,
-.body-dark .OwO-packages li:hover,
-.body-dark .saying-textarea,
-.body-dark .dialog,
-.body-dark .options,
-.body-dark .options-theme-label,
-.body-dark .options-family-button,
-.body-dark .drawer,
-.body-dark .drawer-icon,
-.body-dark .drawer-search-form input,
-.body-dark .drawer-search-form button {
-	background: #5a5a5a!important
-}
-/* OwO */
-.body-dark .OwO-item,
-.body-dark .OwO-bar {
-	background: rgb(110,110,110)!important;
-}
-/* Need white fonts */
-.body-dark .comment,
-.body-dark .comment a,
-.body-dark .comment-content p,
-.body-dark .comment-form input,
-.body-dark .comment-form textarea,
-.body-dark .OwO-logo,
-.body-dark .dark-button,
-.body-dark .footer-info,
-.body-dark .footer-info a,
-.body-dark .gotop-button,
-.body-dark .nav,
-.body-dark .nav a,
-.body-dark .post-body,
-.body-dark .post-body a,
-.body-dark .post-content blockquote,
-.body-dark .post-item,
-.body-dark .post-item a,
-.body-dark .search-form button,
-.body-dark .search-close,
-.body-dark .login,
-.body-dark .login-close,
-.body-darl .login a,
-.body-dark .OwO-bar,
-.body-dark .mobile-menu,
-.body-dark .mobile-menu a,
-.body-dark .mobile-menu-close,
-.body-dark .mobile-menu-footer,
-.body-dark .options-family-button,
-.body-dark .options-theme-item:hover .options-theme-label,
-.body-dark .options-contentsize-button,
-.body-dark .drawer,
-.body-dark .drawer a,
-.body-dark .drawer-open .drawer-button,
-.body-dark .drawer-icon,
-.body-dark .drawer-search-form button,
-.body-dark .drawer-search-form input {
-	color: #fafafa!important
-}
-/* Need #5a5a5a color */
-.body-dark .options-theme-label{
-	color: #5a5a5a!important;
-}
-/* Need dark border-color */
-.body-dark .comment-form input,
-.body-dark .comment-form textarea,
-.body-dark .post-content blockquote,
-.body-dark .post-content table,
-.body-dark .post-content td,
-.body-dark .post-content th,
-.body-dark .post-content tr,
-.body-dark .OwO-logo,
-.body-dark .OwO-body,
-.body-dark .mobile-menu-title,
-.body-dark .mobile-menu-footer,
-.body-dark .saying-textarea,
-.body-dark .options hr, 
-.body-dark .drawer,
-.body-dark .drawer-search-form button,
-.body-dark .drawer-search-form input {
-	border-color: #6e6e6e!important;
-}
-.body-dark .tip {
-	border-top-color: #6e6e6e!important;
-	border-bottom-color: #6e6e6e!important;
-	border-right-color: #6e6e6e!important;
-}
-.body-dark .comment-by-author .bubble.comment-content:before,
-.body-dark .bubble.comment-content:before,
-.body-dark .bubble.saying-body:before {
-	border-right-color: #646464!important;
-}
-/* Darker Mask */
-.body-dark .dark-cover {
-	background: rgba(10,10,10,0.35)
-}
-/* Dark Footer */
-.body-dark .footer-info {
-	background: #3c3c3c!important
-}
-/* Dark Nav */
-.body-dark .nav {
-	background: rgba(50,50,50,.9)!important;
-	box-shadow: 0 0 20px #000;
-	-webkit-box-shadow: 0 0 20px #000;
-	-moz-box-shadow: 0 0 30px #000
-}
-.body-dark .nav a:hover,
-.body-dark .nav-mobile-title:hover,
-.body-dark .mobile-menu-pagelist a:hover {
-	background: #646464
-}
-.body-dark .nav-icon-button {
-	background: rgb(90,90,90)
-}
-.body-dark .nav-icon-button {
-	color: #fff
-}
-.body-dark .nav-icon-button:hover,.body-dark .search-close {
-	background: #5a5a5a
-}
-/* Need dark filter */
-.body-dark img {
-	filter: brightness(90%);
-}
-.body-dark .post-banner,
-.body-dark iframe,
-.body-dark .aplayer-pic {
-	filter: brightness(75%);
-}
-/* Need Transparent dark background */
-.body-dark .search,
-.body-dark .login,
-.body-dark .mobile-menu {
-	background: rgba(90,90,90,.95)
-}
-/* Pio Plugin in dark theme */
-.body-dark .pio-container .pio-dialog {
-	color: #fff;
-	box-shadow: 1px 1px 15px #505050;
-	-webkit-box-shadow: 1px 1px 15px #505050;
-	-moz-box-shadow: 1px 1px 15px #505050;
-	background: rgba(90,90,90,.9)
-}
-.body-dark .pio-action span {
-	background-color: rgba(90,90,90,.9)
-}
-/* Meting Plugin in dark theme */
-.body-dark .aplayer,
-.body-dark .aplayer-list-index,
-.body-dark .aplayer-list-author,
-.body-dark .aplayer .aplayer-icon,
-.body-dark .aplayer .aplayer-lrc-contents p,
-.body-dark .aplayer .aplayer-controller,
-.body-dark .aplayer .aplayer-info,
-.body-dark .aplayer .aplayer-author {
-    color: rgb(240,240,240)!important;
-}
-.body-dark .aplayer {
-	background: rgb(100,100,100);
-}
-.body-dark .aplayer-list-light,
-.body-dark .aplayer .aplayer-list ol li:hover {
-    background: rgb(140,140,140)!important;
-}
-.body-dark .aplayer .aplayer-lrc:before,
-.body-dark .aplayer .aplayer-lrc:after {
-    background: transparent;
-    background: transparent;
-    filter: none;
-}
-.body-dark .aplayer .aplayer-list ol li {
-	border-color: rgb(120,120,120);
-}
-.body-dark .aplayer-list::-webkit-scrollbar {
-	background: rgb(110,110,110)!important;
-}
-.body-dark .aplayer-list::-webkit-scrollbar-thumb {
-	background: rgb(80,80,80);
-}
-.body-dark .aplayer-info {
-	border: none;
-}
+@charset 'utf-8';.body-dark{background:#4b4b4b;color:#fafafa}.body-dark .post-content code{background:#505050}.body-dark .post-content img:not(.OwO-img){box-shadow:0 2px 10px #323232;-moz-box-shadow:0 2px 10px #323232;-webkit-box-shadow:0 2px 10px #323232}.body-dark .post-content tr:nth-child(odd){background:#6e6e6e}.body-dark .post-content hr{background:#787878}.body-dark .post-meta a{color:gray!important}.body-dark .comment-reply a{background:0 0}.body-dark .options{box-shadow:0 0 0 #fff;-moz-box-shadow:0 0 0 #fff;-webkit-box-shadow:0 0 0 #fff}.body-dark .OwO .OwO-body .OwO-items .OwO-item:hover,.body-dark .OwO-body,.body-dark .OwO-open .OwO-logo,.body-dark .bubble.saying-body:hover,.body-dark .comment-pagenav a,.body-dark .dark-button,.body-dark .options,.body-dark .post-body,.body-dark .post-item,.body-dark .post-pagenav a{box-shadow:0 0 36px #323232!important;-moz-box-shadow:0 0 36px #323232!important;-webkit-box-shadow:0 0 36px #323232!important}.body-dark .gotop-button,.body-dark .links-item{box-shadow:0 1px 3px #323232!important}.body-dark .gotop-button:hover,.body-dark .links-item:hover{box-shadow:0 4px 22px #323232!important}.body-dark .archives-list a:hover,.body-dark .bubble.comment-content,.body-dark .bubble.saying-body,.body-dark .comment-author,.body-dark .comment-by-author .bubble.comment-content,.body-dark .comment-pagenav a,.body-dark .comment-submit button,.body-dark .drawer-content a:hover,.body-dark .drawer-footer,.body-dark .drawer-search,.body-dark .options-button-active,.body-dark .tags-item a{background:#646464!important}.body-dark .OwO-body,.body-dark .OwO-logo,.body-dark .OwO-package-active,.body-dark .OwO-packages li:hover,.body-dark .comment-form input,.body-dark .comment-form textarea,.body-dark .comment-reply a:hover,.body-dark .dark-button,.body-dark .dialog,.body-dark .drawer,.body-dark .drawer-icon,.body-dark .drawer-search-form button,.body-dark .drawer-search-form input,.body-dark .gotop-button,.body-dark .links-item,.body-dark .options,.body-dark .options-family-button,.body-dark .options-theme-label,.body-dark .post-body,.body-dark .post-content th,.body-dark .post-item,.body-dark .post-pagenav a,.body-dark .saying-textarea,.body-dark .search-form input{background:#5a5a5a!important}.body-dark .OwO-bar,.body-dark .OwO-item{background:#6e6e6e!important}.body-dark .OwO-bar,.body-dark .OwO-logo,.body-dark .comment,.body-dark .comment a,.body-dark .comment-content p,.body-dark .comment-form input,.body-dark .comment-form textarea,.body-dark .dark-button,.body-dark .drawer,.body-dark .drawer a,.body-dark .drawer-icon,.body-dark .drawer-open .drawer-button,.body-dark .drawer-search-form button,.body-dark .drawer-search-form input,.body-dark .footer-info,.body-dark .footer-info a,.body-dark .gotop-button,.body-dark .login,.body-dark .login-close,.body-dark .mobile-menu,.body-dark .mobile-menu a,.body-dark .mobile-menu-close,.body-dark .mobile-menu-footer,.body-dark .nav,.body-dark .nav a,.body-dark .options-contentsize-button,.body-dark .options-family-button,.body-dark .options-theme-item:hover .options-theme-label,.body-dark .post-body,.body-dark .post-body a,.body-dark .post-content blockquote,.body-dark .post-item,.body-dark .post-item a,.body-dark .search-close,.body-dark .search-form button,.body-darl .login a{color:#fafafa!important}.body-dark .options-theme-label{color:#5a5a5a!important}.body-dark .OwO-body,.body-dark .OwO-logo,.body-dark .comment-form input,.body-dark .comment-form textarea,.body-dark .drawer,.body-dark .drawer-search-form button,.body-dark .drawer-search-form input,.body-dark .mobile-menu-footer,.body-dark .mobile-menu-title,.body-dark .options hr,.body-dark .post-content blockquote,.body-dark .post-content table,.body-dark .post-content td,.body-dark .post-content th,.body-dark .post-content tr,.body-dark .saying-textarea{border-color:#6e6e6e!important}.body-dark .tip{border-top-color:#6e6e6e!important;border-bottom-color:#6e6e6e!important;border-right-color:#6e6e6e!important}.body-dark .bubble.comment-content:before,.body-dark .bubble.saying-body:before,.body-dark .comment-by-author .bubble.comment-content:before{border-right-color:#646464!important}.body-dark .dark-cover{background:rgba(10,10,10,.35)}.body-dark .footer-info{background:#3c3c3c!important}.body-dark .nav{background:rgba(50,50,50,.9)!important;box-shadow:0 0 20px #000;-webkit-box-shadow:0 0 20px #000;-moz-box-shadow:0 0 30px #000}.body-dark .mobile-menu-pagelist a:hover,.body-dark .nav a:hover,.body-dark .nav-mobile-title:hover{background:#646464}.body-dark .nav-icon-button{background:#5a5a5a}.body-dark .nav-icon-button{color:#fff}.body-dark .nav-icon-button:hover,.body-dark .search-close{background:#5a5a5a}.body-dark img{filter:brightness(90%)}.body-dark .aplayer-pic,.body-dark .post-banner,.body-dark iframe{filter:brightness(75%)}.body-dark .login,.body-dark .mobile-menu,.body-dark .search{background:rgba(90,90,90,.95)}.body-dark .pio-container .pio-dialog{color:#fff;box-shadow:1px 1px 15px #505050;-webkit-box-shadow:1px 1px 15px #505050;-moz-box-shadow:1px 1px 15px #505050;background:rgba(90,90,90,.9)}.body-dark .pio-action span{background-color:rgba(90,90,90,.9)}.body-dark .aplayer,.body-dark .aplayer .aplayer-author,.body-dark .aplayer .aplayer-controller,.body-dark .aplayer .aplayer-icon,.body-dark .aplayer .aplayer-info,.body-dark .aplayer .aplayer-lrc-contents p,.body-dark .aplayer-list-author,.body-dark .aplayer-list-index{color:#f0f0f0!important}.body-dark .aplayer{background:#646464}.body-dark .aplayer .aplayer-list ol li:hover,.body-dark .aplayer-list-light{background:#8c8c8c!important}.body-dark .aplayer .aplayer-lrc:after,.body-dark .aplayer .aplayer-lrc:before{background:0 0;background:0 0;filter:none}.body-dark .aplayer .aplayer-list ol li{border-color:#787878}.body-dark .aplayer-list::-webkit-scrollbar{background:#6e6e6e!important}.body-dark .aplayer-list::-webkit-scrollbar-thumb{background:#505050}.body-dark .aplayer-info{border:none}
