--- a/assets/css/main/component.css
+++ b/assets/css/main/component.css
@@ -33,7 +33,7 @@ button {
 }
 /* Alert */
 .alert {
-	background: var(--theme-color);
+	background: rgb(100,100,100);
 	color: #fff;
 	border-bottom-left-radius: 4px;
 	border-bottom-right-radius: 4px;
@@ -44,9 +44,9 @@ button {
 	right: 0;
 	width: 100%;
 	margin: 0 auto;
-	box-shadow: 0 0 4px #ccc;
-	-moz-box-shadow: 0 0 4px #ccc;
-	-webkit-box-shadow: 0 0 4px #ccc;
+	box-shadow: 0 0 4px #000;
+	-moz-box-shadow: 0 0 4px #000;
+	-webkit-box-shadow: 0 0 4px #000;
 	z-index: 20;
 	transition: all 0.3s;
 }
