--- a/assets/css/main/post.css
+++ b/assets/css/main/post.css
@@ -7,7 +7,8 @@
 /* 文章 */
 .post-list,
 .post-body {
-	margin-top: -110px
+	margin-top: -110px;
+	transition: .8s;
 }
 .post-body,.post-item {
 	background: #fff;
@@ -146,6 +147,10 @@
 .post-content p {
 	vertical-align: middle;
 }
+.post-content ul ul,
+.post-content ol ol {
+	margin-top: 0;
+}
 .post-content .owo-img {
 	box-shadow: 0 0 0 #fff;
 	-moz-box-shadow: 0 0 0 #fff;
@@ -154,6 +159,49 @@
 	height: 34px;
 	vertical-align: middle
 }
+/* 加密文章 */
+.post-content .protected {
+	display: flex;
+	align-items: center;
+    justify-content: center;
+}
+
+.post-content .protected .word {
+	display: none;
+}
+
+.post-content .protected .text {
+    border-top-left-radius: 6px;
+	border-bottom-left-radius: 6px;
+	margin-right: -7px;
+}
+
+.post-content .protected .submit {
+	border-top-right-radius: 6px;
+	border-bottom-right-radius: 6px;
+	margin-left: -7xp;
+	background: var(--theme-color);
+	border-color: var(--theme-color)!important;
+	color: #fff;
+	cursor: pointer;
+}
+
+.post-content .protected .submit:hover {
+	opacity: 0.8;
+}
+
+.post-content .protected .submit,
+.post-content .protected .text {
+	border: 1px solid #ccc;
+	padding: 8px 14px;
+	box-shadow: 0 2px 10px #ddd;
+	transition: .3s;
+}
+
+.post-content .protected {
+	margin: 50px 0;
+}
+
 /* >短代码 */
 .tip {
 	border: 1px solid rgb(240,240,240);
