--- a/assets/css/main/dark.css
+++ b/assets/css/main/dark.css
@@ -284,3 +284,12 @@
 .body-dark iframe {
 	filter:brightness(72%)
 }
+/* Dark shade */
+.body-dark .dark-shade {
+    position:fixed;
+    width:100%;
+    height:100%;
+    background-color:#00000085;
+    z-index:100;
+    pointer-events:none
+}
