--- a/assets/css/main/dark.css
+++ b/assets/css/main/dark.css
@@ -79,7 +79,7 @@
 }
 /* Nav/Search/login */
 .body-dark .nav {
-	background:rgba(50,50,50,.86)!important;
+	background:rgba(50,50,50,.86);
 	box-shadow:0 0 20px #000;
 	-webkit-box-shadow:0 0 20px #000;
 	-moz-box-shadow:0 0 30px #000
