💦 Add：为navbar添加单独的透明样式

--- a/assets/css/main/nav.css
+++ b/assets/css/main/nav.css
@@ -38,6 +38,10 @@
 	transition: background .2s;
 	font-size: 16px
 }
+.nav-aero{
+    background : transparent !important;
+    box-shadow : none !important;
+}
 .nav-content a:hover,
 .nav-mobile-content a:hover,
 .nav-mobile-content button:hover,
