⬜Perf：调整移动端nav的颜色表现

--- a/assets/css/main/nav.css
+++ b/assets/css/main/nav.css
@@ -36,7 +36,8 @@
 	overflow-y: hidden;
 	position: relative;
 }
-.nav-aero.nav-font-white .nav-content a{
+.nav-aero.nav-font-white .nav-content a,
+.nav-aero.nav-font-white .nav-mobile-content a{
     color: #FFFFFF;
 }
 .nav-content a {
