--- a/assets/css/main/post.css
+++ b/assets/css/main/post.css
@@ -54,8 +54,9 @@
 .post-footer {
 	color: #c8c8c8;
 	font-size: 14px;
-	padding: 52px;
+	padding: 26px;
 	padding-top: 0;
+	margin-top: -20px
 }
 .post-tags a {
 	color: #bebebe;
@@ -67,6 +68,41 @@
 .post-tags a:hover {
 	background: #f5f5f5
 }
+.post-share {
+	border-top: 1px solid rgb(230,230,230);
+	border-bottom: 1px solid rgb(230,230,230);
+	padding: 18px 0;
+	margin: 20px 0;
+    vertical-align:middle;
+}
+.post-share .social-share {
+	margin-right: 10px;
+	vertical-align:middle;
+}
+.post-share .social-share i {
+    transition: color .2s
+}
+.post-share .social-share.qq:hover i {
+	color: rgb(127,81,255);
+}
+.post-share .social-share.weibo:hover i {
+	color: red;
+}
+.post-share .social-share.twitter:hover i {
+	color: rgb(29,161,242);
+}
+.post-share .social-share.copyright i {
+	float: right;
+	font-size: 20px;
+	margin-top: 7px;
+	margin-right: 17px;
+	cursor: pointer;
+	display: none/*移动端不显示*/
+}
+.post-share .iconfont {
+	color: rgb(200,200,200);
+	font-size: 25px;
+}
 /* >文章内容 */
 .post-content {
 	padding: 26px;
@@ -75,7 +111,7 @@
 	word-break: break-all
 }
 .post-content h2 {
-	margin: 60px 0;
+	margin: 45px 0;
 	margin-bottom: 10px;
 }
 .post-content h3:before {
